Edit section on being imperfectly human

--- a/community-manager-self-care.adoc
+++ b/community-manager-self-care.adoc
@@ -80,47 +80,47 @@ Set realistic expectations on deliverables and communicate frequently within the
 
 By taking steps towards actively promoting and advocating for self-care, you prompt members following your lead to do the same. You also begin revealing your human side, eroding the unhealthy addumption that leaders are invulnerable to emotional dimensions of the work.
 
-=== Being human
+=== Being (imperfectly and empathetically) human
 
-We can often find ourselves being controlled by our own, or by other's, generalization of what a community manager should be: driven, friendly, successful, super human, or perfect even.
+We can often find ourselves being controlled by unrealistic generalizations (either our own, or others') of what a community manager should be: driven, friendly, successful, super-human, even perfect.
 
-However, the list of what a leader should be is long, contradicting and often fundamentally flawed.
-A leader can be many things to many people but the most important aspect is that they are human: flaws and all.
+However, these impressions of what a leader really "should" be are full of contradictions and fundamentally flawed.
+A leader can be many things to many people, but the most important aspect is that they are human: flaws and all.
 
-We tend to over compensate, trying to live up to the wrongly perceived image of a leader, by suppressing or hiding our negative emotions in fear of being seen as too emotional or worse, being out of control.
+And yet community managers may tend to over-compensate, attempting to live up to these leadership images—especially by suppressing and hiding negative emotions for fear of being seen as "too emotional" or, worse, "out of control."
 
-There is a difference of being in control, under control and being controlled.
+But there's a difference between being _in_ control, being _controlled_, and being _under_ control.
 
-Believing that being in control is a reflection of our confidence in what we produce, is inaccurate.
+The belief that being "in control" is a reflection of our confidence in what we produce is inaccurate.
 It actually demonstrates that we are reluctant to show others that we are not perfect and struggle to accept anything less.
+Although maintaining this front can help shield us temporarily from others' emotions and criticisms towards us, it doesn't protect us from our own self-destruction caused by bottling them up.
 
-Although maintaining this front can help shield us temporarily from others' emotions and criticisms towards us, it doesn't protect ourselves from our own self-destruction caused by bottling them up.
+The consequences of suppressing your emotions will inevitably surface, and dramatically so.
+This is when our emotions _control us_ (and our actions), which often leads to rumination, collapse of relationships with one's team or community, and other negative outcomes like burnout.
 
-Consequences of suppressing your emotions is that they will inevitably surface and dramatically so.
-This is when our emotions control us and our actions, which often leads to rumination, break down of relationships with the team or community and other negative outcomes including burnout.
-
-The ultimate aim is to be "under control" in your leadership, emotions and workload.
-Our passion and attention is directed in a constructive and purposeful manner, this being especially important after when a mistake is made.
+The ultimate aim is to be "under control," both with your emotions and your workload.
+Here, our passion and attention are directed in a constructive and purposeful manner—a particularly important place to be in when we've made a mistake.
 
 The phrase "bring your whole self to work" is a good expression of allowing yourself this forgiveness.
-We feel we can admit when we don't know something, the right decision or simply acknowledging when we've made a mistake.
-But it also can be applied to recognizing and accepting that we can have good and bad days.
+We should feel like we can admit when we don't know something, haven't made the correct decision, or have made a mistake.
+And we should also recognize and accept that we can have good days and bad ones.
 
-Being honest with ourselves is as important as being honest with the community.
-Needing to admit that we may not be at our best and detracting yourself from unintentionally escalating  difficult situations into becoming worse situations would be the best choice to make at those times for the community.
+Being honest with ourselves is as important as being honest with our communities.
+Needing to admit that we may not be at our best and detracting yourself from unintentionally escalating difficult situations into becoming worse situations would be the best choice to make at those times for the community.
 
-This emotional labor can be extremely exhausting to maintain.
-We must acknowledge and accept that being perfect is unattainable, and more importantly, not required to be the best leader.
-What is important is that people can relate to your human side.
+Maintaining this kind of emotional labor can be incredibly exhausting.
+We must acknowledge and accept that being perfect is unattainable, and more importantly, not a requirement for being a great leader.
+What _is_ important is that people can relate to your human side.
 
-People gravitate to those that they share a kinship with and being able to identify this is one of the characteristics of a good community manager.
-If your members see that you have qualities that they can relate to, it helps them to more easily empathize with you.
-Funnily, we usually try to highlight the significance of our empathy for our members or team, but it's equally important that our members demonstrate compassion, and gratitude to us too.
+People gravitate to others with whom they share a kinship, and being able to identify this feeling of kinship is one hallmark of an effective community manager.
+If your members see that you possess qualities they can relate to, they can more easily empathize with you.
+Funnily enough, however, we usually try to highlight the significance of our empathy for our members or team, but it's equally important that our members demonstrate compassion, and gratitude to us too.
 
-Nurturing this empathy, from both sides, will help to develop deeper connections and trust between members and team, which in turn can help establish an informal social support network.
-This network can be a conduit to promoting the importance of self-care, creating judgment free zone or providing safe havens to individual members, including yourself, to reflect on emotions, frustrations or workload.
+As everyone on a team or in a community nurtures this empathy, they will gradually deeper connections and trust between them, which in turn can help them establish an informal social support network.
+This network can be a conduit for promoting the importance of self-care, creating judgment-free zones, or providing safe havens to individual members (including yourself) for emotional reflection, airing frustrations, or sharing workloads.
 
-It is inevitable that some members will expect you to adhere to the pretense of being the all powerful, infallible captain of the ship, but with an effective self-care routine and the backing of the members within the social support network you will be able to feel more confident in yourself to handle those stressors and that your vulnerabilities are what makes you a better leader to the community.
+It is inevitable that some members will expect you to adhere to the pretense of being the all powerful, infallible captain of the ship, but with an effective self-care routine and the backing of the members within this social support network, you'll feel more confident in your ability to handle those stressors.
+You'll also understand that your vulnerabilities are what makes you a better community leader.
 
 == Types of Self-Care
 
