Remove placeholder for contact address

--- a/creating_diverse_inclusive_communities.adoc
+++ b/creating_diverse_inclusive_communities.adoc
@@ -1,5 +1,5 @@
 = Creating diverse and inclusive communities
-Authors: Lauren Maffeo <lauren@address.tld>
+Authors: Lauren Maffeo
 Updated: 2020-07-19
 
 == Introduction
