Including a wee introduction to the chapter

--- a/community-manager-self-care.adoc
+++ b/community-manager-self-care.adoc
@@ -25,7 +25,7 @@ To help ourselves as community managers, and in turn help others, we need to lea
 These signs can be subtle and hard to detect, but by identifying and acknowledging these changes in behavior (first and foremost in yourself), you begin applying similar awareness to others in your communities.
 This experience can provide insight to developing and building up social norms and mechanisms for the community to help reduce the occurrence and impact of burnout thus promoting a physically and mentally healthy, more productive community.
 
-_In this chapter, we'll ..._
+In this chapter, we'll explore the importance of self-care and why community managers should be mindful of the interpersonal aspects of the role that may affect them both positively and negatively. This chapter also provides practical steps to encourage and maintain a healthy work life balance that can be applied to themselves and promote within their community.
 
 == The importance of self-care
 
