Made amendments based on reviews

--- a/community-manager-self-care.adoc
+++ b/community-manager-self-care.adoc
@@ -105,8 +105,7 @@ The phrase "bring your whole self to work" is a good expression of allowing your
 We should feel like we can admit when we don't know something, haven't made the correct decision, or have made a mistake.
 And we should also recognize and accept that we can have good days and bad ones.
 
-Being honest with ourselves is as important as being honest with our communities.
-Needing to admit that we may not be at our best and detracting yourself from unintentionally escalating difficult situations into becoming worse situations would be the best choice to make at those times for the community.
+Being honest with ourselves is as important as being honest with our communities. If we're not honest with ourselves and our emotional state we may unintentionally escalating difficult situations within the community due to our failure to acknowledge that we perhaps should be detracting ourselves instead. Of course until we feel we have more clarity to address the situation appropriately.
 
 Maintaining this kind of emotional labor can be incredibly exhausting.
 We must acknowledge and accept that being perfect is unattainable, and more importantly, not a requirement for being a great leader.
@@ -114,7 +113,7 @@ What _is_ important is that people can relate to your human side.
 
 People gravitate to others with whom they share a kinship, and being able to identify this feeling of kinship is one hallmark of an effective community manager.
 If your members see that you possess qualities they can relate to, they can more easily empathize with you.
-Funnily enough, however, we usually try to highlight the significance of our empathy for our members or team, but it's equally important that our members demonstrate compassion, and gratitude to us too.
+Ironically, we often emphasis the significance of practicing empathy for our members or team, but it's equally important that our members demonstrate compassion, and gratitude towards us too.
 
 As everyone on a team or in a community nurtures this empathy, they will gradually deeper connections and trust between them, which in turn can help them establish an informal social support network.
 This network can be a conduit for promoting the importance of self-care, creating judgment-free zones, or providing safe havens to individual members (including yourself) for emotional reflection, airing frustrations, or sharing workloads.
