Make additional editorial changes

--- a/community-manager-self-care.adoc
+++ b/community-manager-self-care.adoc
@@ -105,7 +105,9 @@ The phrase "bring your whole self to work" is a good expression of allowing your
 We should feel like we can admit when we don't know something, haven't made the correct decision, or have made a mistake.
 And we should also recognize and accept that we can have good days and bad ones.
 
-Being honest with ourselves is as important as being honest with our communities. If we're not honest with ourselves and our emotional state we may unintentionally escalating difficult situations within the community due to our failure to acknowledge that we perhaps should be detracting ourselves instead. Of course until we feel we have more clarity to address the situation appropriately.
+Being honest with ourselves is as important as being honest with our communities.
+If we're not honest with ourselves and in tune with our emotional states, we may unintentionally escalate difficult situations within our communities (due to our failures at acknowledging that perhaps _we_ should be stepping back instead).
+Of course until we feel we have more clarity to address the situation appropriately.
 
 Maintaining this kind of emotional labor can be incredibly exhausting.
 We must acknowledge and accept that being perfect is unattainable, and more importantly, not a requirement for being a great leader.
@@ -121,30 +123,32 @@ This network can be a conduit for promoting the importance of self-care, creatin
 It is inevitable that some members will expect you to adhere to the pretense of being the all powerful, infallible captain of the ship, but with an effective self-care routine and the backing of the members within this social support network, you'll feel more confident in your ability to handle those stressors.
 You'll also understand that your vulnerabilities are what makes you a better community leader.
 
-== Types of Self-Care
+== Types of self-care
 
-Self-care is unique to each person as well as depending on our moods and circumstances.To be effective it requires regular and conscious cultivating, so its important that self-care is not seen as only a reactive choice but a means to help break down stress from every day life.
+Everyone will prefer different self-care techniques and strategies, depending on their moods and circumstances.
+To be effective, self-care requires regular and conscious cultivation, so it's important that we view self-care not only a reactive choice but also as a means of alleviating the stresses of everyday life.
 
-There are a number of different types of self-care that aim to satisfy our basic( as well as deeper) needs to promote a healthy and happy mind and body.These are: *physical*, *mental*, *spiritual*, *emotional*, and *social*.
+In general, however, a number of different self-care types can satisfy our basic need to promote a healthy and happy mind and body. These are: *physical*, *mental*, *spiritual*, *emotional*, and *social*.
 
-It is important to remember that we should be aiming to practice a selection of activities from all types to provide yourself a good balance to help you adapt to all types of stress.
+Next, we'll explore each of these types in more detail.
+But remember: we should be aiming to practice a _selection_ of activities of _all_ these types if we're going to provide ourselves a healthy life balance and respond adequately to all types of stress.
 
-=== Physical Self-Care
+=== Physical self-care
 
-Physical is usually the self-care we often do at a minimum subconsciously: feeding, hydrating, sleeping and regular exercise.
+Physical self-care is usually the self-care we perform at a minimum, often subconsciously: feeding, hydrating, sleeping, and exercising.
 
-However, we often find ourselves neglecting these necessities for the sake of work, like for example having frequent all-nighters, or forgetting to eat lunch every weekday.
-Keeping ourselves nourished helps maintain a healthy body as well help us stick to having regular breaks from your work, or environment.
+However, we often find ourselves neglecting these necessities for the sake of work (enduring frequent all-nighters, for example, or forgetting to eat lunch every weekday).
+Keeping ourselves nourished helps us maintain bodily health. Getting into healthy physical self-care routines also helps us take regular breaks from our work—and our work _environments_.
 
-A few examples of physical self-care:
+Physical self-care might include activities like:
 
-- Regular sleep routine
-- Aim for a healthy diet
+- Maintaining a regular sleep routine
+- Eating a healthy diet
 - Taking a nap
 - Getting a massage
 - Going for a stroll
 - Stretching
-- Yoga (or other forms of exercise)
+- Doing yoga (or other forms of exercise)
 
 === Mental Self-Care
 
